--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-semantic-search",
+  "name": "intent-seek",
   "version": "1.0.0",
   "description": "A semantic search that replaces basic keyword search.",
   "main": "index.js",
